force-app/main/default/objects/DuplicateRecordSet/fields/Data_Hygiene_Comments__c.field-meta.xml
<CustomField>
    <fullName>Data_Hygiene_Comments__c</fullName>
    <label>Data Hygiene Comments</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Duplicate - Merge Records</fullName>
            </value>
            <value>
                <fullName>Not Duplicate - Delete RecordSet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>