force-app/main/default/objects/DuplicateRecordSet/fields/Data_Hygiene_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Data_Hygiene_Review_Date__c</fullName>
    <label>Data Hygiene Review Date</label>
    <type>Date</type>
</CustomField>