force-app/main/default/objects/DuplicateRecordSet/fields/Data_Hygiene_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Data_Hygiene_Reviewer__c</fullName>
    <label>Data Hygiene Reviewer</label>
    <length>64</length>
    <type>Text</type>
</CustomField>